--- a/HW_Week13-1(Scrapping).ipynb
+++ b/HW_Week13-1(Scrapping).ipynb
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "55e12659-a230-4646-8a83-fcd11dc85424",
    "metadata": {},
    "outputs": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "635f21c9-9a5c-4457-9bcd-699d4f4ee015",
    "metadata": {},
    "outputs": [
@@ -586,20 +586,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: bs4 in c:\\users\\sdh58\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (0.0.2)\n",
-      "Requirement already satisfied: beautifulsoup4 in c:\\users\\sdh58\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from bs4) (4.13.3)\n",
-      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\sdh58\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from beautifulsoup4->bs4) (2.6)\n",
-      "Requirement already satisfied: typing-extensions>=4.0.0 in c:\\users\\sdh58\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from beautifulsoup4->bs4) (4.12.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.3.1 -> 25.1.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+      "<h1>An Interesting Title</h1>\n"
      ]
     }
    ],
@@ -607,13 +594,47 @@
     "from urllib.request import urlopen\n",
     "from bs4 import BeautifulSoup\n",
     "html = urlopen(\"http://pythonscraping.com/pages/page1.html\")\n",
-    "bsObj = BeautifulSoup(html.read()"
+    "bsObj = BeautifulSoup(html.read())\n",
+    "print(bsObj.h1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e2f723b8-a82b-4d73-be54-82e28efb95e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<html>\n",
+      " <head>\n",
+      "  <title>\n",
+      "   A Useful Page\n",
+      "  </title>\n",
+      " </head>\n",
+      " <body>\n",
+      "  <h1>\n",
+      "   An Interesting Title\n",
+      "  </h1>\n",
+      "  <div>\n",
+      "   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n",
+      "  </div>\n",
+      " </body>\n",
+      "</html>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bsObj.html.prettify())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "851abdfa-5efb-4d0a-b6a0-ace2f35f929c",
+   "id": "a49cc87c-e35a-4430-a42f-cf315fc032de",
    "metadata": {},
    "outputs": [],
    "source": []
